# RESUME

./: README.md  db.sqlite3  pyproject.toml
cv/: admin.py  models.py  urls.py  views.py
cv/migrations/: 0001_initial.py  0002_remove_profile_summary.py
cv/templates/: display.html  oyebola.html
login/: urls.py  views.py
resume/: settings.py  urls.py
templates/: base.html
