[tool.poetry]
name = "Resume"
version = "0.1.0"
description = "Django Interactive Class Projects to build a Cv app"
authors = ["Adesegun Adesola ADEBOYE <adeboye.adesegun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
